--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server API OMDBAPI",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "r3ndyDinar",
   "license": "ISC",
