--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "helmet": "^3.20.1",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "cors":"^2.8.5"
   }
 }
